# wolpa

./: .gitignore  AGENTS.md  Cargo.toml  Makefile
.github/workflows/: ci.yml
app/: Package.swift
app/Sources/WolpaApp/: main.swift
app/Sources/WolpaBridge/: WolpaBridge.swift
app/Sources/WolpaInput/: WolpaInputHandler.swift
app/Sources/WolpaView/: RenderView.swift  WolpaView.swift
crates/wolpa-bridge/: Cargo.toml  cbindgen.toml
crates/wolpa-bridge/src/: lib.rs
crates/wolpa-bridge/src/ffi/: mod.rs
crates/wolpa-cli/: Cargo.toml
crates/wolpa-cli/src/: main.rs
crates/wolpa-core/: Cargo.toml
crates/wolpa-core/src/: lib.rs
crates/wolpa-core/src/event/: mod.rs
crates/wolpa-core/src/grid/: mod.rs
crates/wolpa-core/src/highlight/: mod.rs
crates/wolpa-core/src/input/: mod.rs
crates/wolpa-core/src/rpc/: mod.rs
crates/wolpa-core/tests/: fixtures.rs  rpc_integration.rs
crates/wolpa-render/: Cargo.toml
crates/wolpa-render/src/: lib.rs
crates/wolpa-render/src/atlas/: mod.rs
crates/wolpa-render/src/font/: mod.rs
crates/wolpa-render/src/layout/: mod.rs
crates/wolpa-render/src/metal/: mod.rs
